Added: The K-Means algorithm

--- a/src/k_means/CMakeLists.txt
+++ b/src/k_means/CMakeLists.txt
@@ -1,4 +1,5 @@
-set(SOURCES k_means.h k_means.cpp)
+set(SOURCES k_means.h k_means.cpp ../math/point.h)
 
 add_library(k_means ${SOURCES})
 target_include_directories(k_means INTERFACE ..)
+target_link_libraries(k_means PRIVATE math)
